--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
 
     buildFeatures{
         viewBinding true
+        dataBinding true
     }
     buildTypes {
         release {
@@ -46,4 +47,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+
+    //groupie
+    implementation "com.github.lisawray.groupie:groupie:2.10.1"
+    implementation "com.github.lisawray.groupie:groupie-viewbinding:2.10.1"
+    implementation "com.github.lisawray.groupie:groupie-kotlin-android-extensions:2.10.1"
+    implementation "com.github.lisawray.groupie:groupie-databinding:2.10.1"
 }
