--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,7 @@ dependencies {
     implementation 'androidx.room:room-paging:2.5.0'
     implementation 'androidx.room:room-ktx:2.5.0'
     kapt 'androidx.room:room-compiler:2.5.0'
+
+    //workermanager
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
 }
