--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
@@ -17,19 +18,19 @@
         android:theme="@style/Theme.Tdtest2"
         tools:targetApi="31">
         <activity
-            android:name=".presentasion.ChatActivity"
+            android:name=".presentasion.chatactivity.ChatActivity"
             android:exported="false" />
         <activity
-            android:name=".SearchActivity"
+            android:name=".presentasion.searchactivity.SearchActivity"
             android:exported="false" />
         <activity
-            android:name=".ViewDataActivity"
+            android:name=".presentasion.viewdataactivity.ViewDataActivity"
             android:exported="false" />
         <activity
-            android:name=".EnterDataActivity"
+            android:name=".presentasion.enterdataactivity.EnterDataActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".presentasion.mainactivity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
