--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
@@ -18,10 +17,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tdtest2"
         tools:targetApi="31">
-
+        <activity
+            android:name=".presentasion.testingalgorithmactivity.TestingAlgorithmActivity"
+            android:exported="false" />
         <activity
             android:name=".presentasion.mainactivity.MainActivity"
             android:exported="false" />
+
         <receiver
             android:name=".reminder.TaskReminderBroadcast"
             android:enabled="true"
