--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.Tdtest2"
         tools:targetApi="31">
         <activity
+            android:name=".presentasion.ClasificationFormActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentasion.testingalgorithmactivity.TestingAlgorithmActivity"
             android:exported="false" />
         <activity
@@ -28,6 +31,7 @@
             android:name=".reminder.TaskReminderBroadcast"
             android:enabled="true"
             android:exported="true" />
+
         <activity
             android:name=".presentasion.searchactivity.SearchActivity"
             android:exported="false" />
