--- a/build.gradle
+++ b/build.gradle
@@ -3,4 +3,5 @@ plugins {
     id 'com.android.application' version '8.1.0-alpha06' apply false
     id 'com.android.library' version '8.1.0-alpha06' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
+    id 'androidx.navigation.safeargs.kotlin' version '2.5.0' apply false
 }
